src-tauri/cargo_check_errors_6_utf8.txt
cargo :     Checking d2r-rust v0.1.0 (F:\mycode\D2Rmutiplay\d2r-rus
t\src-tauri)
所在位置 行:1 字符: 1
+ cargo check 2> cargo_check_errors_6.txt
+ ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
    + CategoryInfo          : NotSpecified: (    Checking d2...rus 
   t\src-tauri):String) [], RemoteException
    + FullyQualifiedErrorId : NativeCommandError
 
error[E0277]: the trait bound `CursorCaptureSettings: std::default:
:Default` is not satisfied
   --> src\modules\ai.rs:111:13
    |
111 |             Default::default(), // Use Default for CursorMode
 if unsure of exact path
    |             ^^^^^^^^^^^^^^^^^^ the trait `std::default::Defau
lt` is not implemented for `CursorCaptureSettings`

For more information about this error, try `rustc --explain E0277`.
error: could not compile `d2r-rust` (lib) due to 1 previous error
